[project]
name = "comfyui_if_ai_loadimages"
description = "It Load Images with subfolders form arbitrary folders previous on node outputs lists- convinient selection via file browser"
version = "1.0.4"
license = { file = "LICENSE.txt" } 
dependencies = ["pillow", "numpy"]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI_IF_AI_LoadImages.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "ComfyUI_IF_LoadImages"
Icon = ""
